Icon update, Navbar logo left aligned, Dropdown animation fixed
main placeholder image replaced

--- a/css/site.css
+++ b/css/site.css
@@ -16,10 +16,11 @@ h3 {
 }
 
 .main_container {
-  background-image: url("../images/jordan-hare.jpg");
+  background-image: url("../images/stockimg.jpg");
   background-repeat: no-repeat;
   background-size: 100% 980px;
   padding-bottom: 200px;
+  padding-top: 100px;
   width: 100%;
 }
 
